# oai

./: .gitignore  README.md  pyproject.toml  requirements.txt
OAI/: .editorconfig  AI_PROJECT_CONTEXT.md  NEXT_TASKS.md  OAI.slnx  Query.sql  REGRESSION_TEST_T86.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  RESEARCH_CONTEXT.md  TASK_HISTORY.md
OAI/OAI.Api/: OAI.Api.csproj  OAI.Api.http  Program.cs  appsettings.Development.json  appsettings.json
OAI/OAI.Api/Controllers/: AuthController.cs  FilesController.cs  HealthController.cs  InvoicesController.cs  UploadsController.cs
OAI/OAI.Api/Hangfire/: HangfireDashboardAuthorizationFilter.cs
OAI/OAI.Api/Options/: InternalApiOptions.cs
OAI/OAI.Application/: Class1.cs  DependencyInjection.cs  OAI.Application.csproj
OAI/OAI.Application.Tests/: OAI.Application.Tests.csproj
OAI/OAI.Domain/: Class1.cs  OAI.Domain.csproj
OAI/OAI.Domain.Tests/: OAI.Domain.Tests.csproj
OAI/OAI.Domain/Common/: Entity.cs
OAI/OAI.Infrastructure/: Class1.cs  DependencyInjection.cs  OAI.Infrastructure.csproj
OAI/OAI.Infrastructure.Tests/: OAI.Infrastructure.Tests.csproj
OAI/OAI.Web/: OAI.Web.csproj  Program.cs  appsettings.Development.json  appsettings.json  package-lock.json  package.json
OAI/OAI.Worker/: OAI.Worker.csproj  Program.cs  Worker.cs  appsettings.Development.json
src/invoice_extractor/: __init__.py  consistency.py  extractor.py  llm.py  models.py  ocr.py
src/invoice_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_consistency.py  test_extractor.py  test_llm.py  test_models.py  test_ocr.py
(+381 files in other folders)
